[project]
name = "reyserver"
version = "1.1.37"
description = "Backend server method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "server", "backend", "API", "async", "asynchronous"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "reykit"
]

[project.urls]
homepage = "https://github.com/reyxbo/reyserver/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "python-multipart",
    "reykit",
    "sqlalchemy",
    "sqlmodel",
    "uvicorn[standard]"
]
