[project]
name = "reyserver"
version = "1.1.57"
description = "Backend server method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "server", "backend", "API", "async", "asynchronous"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "email-validator",
    "fastapi[standard]",
    "reydb",
    "reykit",
    "sqladmin[full]",
    "uvicorn[standard]"
]

[project.urls]
homepage = "https://github.com/reyxbo/reyserver/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
